[package]
name = "exo-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
authors = ["rUv <ruv@ruv.io>"]
repository = "https://github.com/ruvnet/ruvector"
homepage = "https://ruv.io"
documentation = "https://docs.rs/exo-node"
description = "Node.js bindings for EXO-AI cognitive substrate via NAPI-RS"
keywords = ["nodejs", "napi", "bindings", "cognitive", "ai"]
categories = ["api-bindings", "science", "wasm"]
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
# EXO-AI core
exo-core = "0.1"
exo-backend-classical = "0.1"

# Node.js bindings
napi = { version = "2.16", features = ["napi9", "async", "tokio_rt"] }
napi-derive = "2.16"

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID for pattern IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
